macrotable/tests/ui/err/bracketed_tuple_row.stderr
error: rows for tuple bindings must use parentheses, such as `(u16, Small)`
 --> tests/ui/err/bracketed_tuple_row.rs:4:29
  |
4 |     repeat!((#T, #Kind) in [[u16, Small]] {
  |                             ^
